style: works.htmlの写真フレームスタイルを簡素化

--- a/works.html
+++ b/works.html
@@ -1,180 +1,181 @@
 <!DOCTYPE html>
 <html lang="ja">
-  <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>PF_n.d_works</title>
-    <!-- 日本語用 noto sans jp -->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@100..900&display=swap" rel="stylesheet">
-    <!-- 日本語用 Shippori Mincho jp -->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Shippori+Mincho:wght@400;500;600;700;800&display=swap" rel="stylesheet">
-    <!-- 日本語用 M PLUS Rounded 1c -->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=M+PLUS+Rounded+1c:wght@100;300;400;500;700;800;900&display=swap" rel="stylesheet">
-    <!-- 英語用 Oswald -->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@200..700&display=swap" rel="stylesheet">
-    <!-- 英語用 montserrat -->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
-    <link rel="icon" href="/img/logo.webp">
-    <link rel="stylesheet" href="./css/reset.css">
-    <!-- <link rel="stylesheet" href="./css/style.css"> -->
-    <link rel="stylesheet" href="./css/main.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script> <!-- jQueryの読み込み -->
-  </head>
-  <body class="works__page">
-    <!-- ***************** header ***************** -->
-    <header class="header">
-      <div class="header__container">
-        <div class="header__company-info">
-          <div class="header__logo">
-            <a href="./index.html"><img src="./img/logo.webp" alt="会社ロゴ"></a>
-          </div>
-          <h1 class="header__company-name"><a href="./index.html">有限会社 田里興業</a></h1>
+
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>PF_n.d_works</title>
+  <!-- 日本語用 noto sans jp -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@100..900&display=swap" rel="stylesheet">
+  <!-- 日本語用 Shippori Mincho jp -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Shippori+Mincho:wght@400;500;600;700;800&display=swap"
+    rel="stylesheet">
+  <!-- 日本語用 M PLUS Rounded 1c -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=M+PLUS+Rounded+1c:wght@100;300;400;500;700;800;900&display=swap"
+    rel="stylesheet">
+  <!-- 英語用 Oswald -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@200..700&display=swap" rel="stylesheet">
+  <!-- 英語用 montserrat -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
+    rel="stylesheet">
+  <link rel="icon" href="/img/logo.webp">
+  <link rel="stylesheet" href="./css/reset.css">
+  <!-- <link rel="stylesheet" href="./css/style.css"> -->
+  <link rel="stylesheet" href="./css/main.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script> <!-- jQueryの読み込み -->
+</head>
+
+<body class="works__page">
+  <!-- ***************** header ***************** -->
+  <header class="header">
+    <div class="header__container">
+      <div class="header__company-info">
+        <div class="header__logo">
+          <a href="./index.html"><img src="./img/logo.webp" alt="会社ロゴ"></a>
         </div>
-        <button class="header__hum-btn btn__open-trigger">
-          <span></span>
-          <span></span>
-          <span></span>
-        </button>
+        <h1 class="header__company-name"><a href="./index.html">有限会社 田里興業</a></h1>
       </div>
-    </header>
-    <!-- ナビゲーション -->
-    <nav class="nav">
-      <div class="nav__container">
-        <div class="nav__list-wrap">
-          <ul class="nav-list">
-            <li class="nav-item"><a href="./index.html">Top</a></li>
-            <li class="nav-item"><a href="./about.html">About</a></li>
-            <li class="nav-item"><a href="./works.html">Works</a></li>
-            <li class="nav-item"><a href="./recruit.html">Recruit</a></li>
-            <li class="nav-item"><a href="./contact.html">Contact</a></li>
-          </ul>
-        </div>
-        <btn class="nav__close-btn btn__close-trigger">閉じる</btn>
-        <div class="btn__close-trigger">
-          <span></span>
-          <span></span>
-        </div>
-      </div>
-    </nav><!-- ナビここまで -->
-    <div class="sub-page__title">
-      <h1>Works</h1>
+      <button class="header__hum-btn btn__open-trigger">
+        <span></span>
+        <span></span>
+        <span></span>
+      </button>
     </div>
-    <!-- ***************** main ***************** -->
-    <main>
-      <div class="works-page__inner">
-        <p class="introduction">
-          田里興業ではRC造、2x4工法・改修工事等に関わる左官工事全般をお請けしています。<br>ここでは実際の現場での施工事例をご紹介します。
-        </p>
+  </header>
+  <!-- ナビゲーション -->
+  <nav class="nav">
+    <div class="nav__container">
+      <div class="nav__list-wrap">
+        <ul class="nav-list">
+          <li class="nav-item"><a href="./index.html">Top</a></li>
+          <li class="nav-item"><a href="./about.html">About</a></li>
+          <li class="nav-item"><a href="./works.html">Works</a></li>
+          <li class="nav-item"><a href="./recruit.html">Recruit</a></li>
+          <li class="nav-item"><a href="./contact.html">Contact</a></li>
+        </ul>
+      </div>
+      <btn class="nav__close-btn btn__close-trigger">閉じる</btn>
+      <div class="btn__close-trigger">
+        <span></span>
+        <span></span>
+      </div>
+    </div>
+  </nav><!-- ナビここまで -->
+  <div class="sub-page__title">
+    <h1>Works</h1>
+  </div>
+  <!-- ***************** main ***************** -->
+  <main>
+    <div class="works-page__inner">
+      <p class="introduction">
+        田里興業ではRC造、2x4工法・改修工事等に関わる左官工事全般をお請けしています。<br>ここでは実際の現場での施工事例をご紹介します。
+      </p>
 
-        <div class="picture-frame">
-          <div class="picture-frame__nested-frame">
-            <div class="picture-frame__img img01">
-              <img src="./img//11.webp" alt="">
-            </div>
-            <div class="picture-frame__img img02">
-              <img src="./img//12.webp" alt="">
-            </div>
-          </div>
+      <div class="pic-f">
+        <div class="pic-f__img img01">
+          <img src="./img//11.webp" alt="">
         </div>
-
-        <p>
-          一から森の中で住環境を設え、火を熾し、食事を摂り、寝床につく、それだけの遊びにのめり込んだ。一から森の中で住環境を設え、火を熾し、食事を摂り、寝床につく、それだけの遊びにのめり込んだ。
-        </p>
-      </div>
-      <div class="wide-img">
-        <img src="./img//19.webp" alt="">
-      </div>
-      <div class="works-page__inner">
-        <p>
-          一から森の中で住環境を設え、火を熾し、食事を摂り、寝床につく、それだけの遊びにのめり込んだ。
-        </p>
-      </div>
-      <div class="wide-img">
-        <img src="./img//階段２.webp" alt="">
-      </div>
-
-      <div class="works-page__inner">
-        <p>
-          一から森の中で住環境を設え、火を熾し、食事を摂り、寝床につく、それだけの遊びにのめり込んだ。
-        </p>
-        <div class="normal-img">
-          <img src="./img//階段上げ裏.webp" alt="">
-        </div>
-        <p>
-          一から森の中で住環境を設え、火を熾し、食事を摂り、寝床につく、それだけの遊びにのめり込んだ。
-        </p>
-        <div class="picture-frame">
-          <div class="picture-frame__nested-frame">
-            <div class="picture-frame__img img01">
-              <img src="./img//14.webp" alt="">
-            </div>
-            <div class="picture-frame__img img02">
-              <img src="./img//13.webp" alt="">
-            </div>
-          </div>
-        </div>
-        <p>
-          到着後、手早くタープをセットし、新しいテーブルのプロトタイプを現場で確認。実際にキャンプで使いながらテストする。国は違えど、自然の中で生活を営むという、シンプルな遊びに境界はなく、豊かな時間を共有できることが何より嬉しい。次第に付近は濃霧に包まれ、まるで山水の世界に迷い込んだような幻想的な情景となった。
-        </p>
-        <div class="normal-img">
-          <img src="./img//15.webp" alt="">
-        </div>
-        <p>
-          豊かな時間を共有できることが何より嬉しい。次第に付近は濃霧に包まれ、まるで山水の世界に迷い込んだような幻想的な情景となった。
-        </p>
-      </div>
-
-      <div class="tall-img__wrapper">
-        <div class="tall-img">
-          <img src="./img//DSC_0545.webp" alt="">
-        </div>
-        <div class="tall-img">
-          <img src="./img//DSC_0545.webp" alt="">
+        <div class="pic-f__img img02">
+          <img src="./img//12.webp" alt="">
         </div>
       </div>
 
-      <div class="works-page__inner">
-        <p>
-          そもそも私がキャンプを始めたのは、東京での多忙なデザイン仕事からの逃避のためだった。ひとときでも脳内をリセットできる強力な浄化作用。
-        </p>
+      <p>
+        一から森の中で住環境を設え、火を熾し、食事を摂り、寝床につく、それだけの遊びにのめり込んだ。一から森の中で住環境を設え、火を熾し、食事を摂り、寝床につく、それだけの遊びにのめり込んだ。
+      </p>
+    </div>
+    <div class="wide-img">
+      <img src="./img//19.webp" alt="">
+    </div>
+    <div class="works-page__inner">
+      <p>
+        一から森の中で住環境を設え、火を熾し、食事を摂り、寝床につく、それだけの遊びにのめり込んだ。
+      </p>
+    </div>
+    <div class="wide-img">
+      <img src="./img//階段２.webp" alt="">
+    </div>
+
+    <div class="works-page__inner">
+      <p>
+        一から森の中で住環境を設え、火を熾し、食事を摂り、寝床につく、それだけの遊びにのめり込んだ。
+      </p>
+      <div class="normal-img">
+        <img src="./img//階段上げ裏.webp" alt="">
       </div>
-
-      <div class="wide-img">
-        <img src="./img//ジョリパット１.webp" alt="">
+      <p>
+        一から森の中で住環境を設え、火を熾し、食事を摂り、寝床につく、それだけの遊びにのめり込んだ。
+      </p>
+      <div class="pic-f">
+        <div class="pic-f__img img01">
+          <img src="./img//14.webp" alt="">
+        </div>
+        <div class="pic-f__img img02">
+          <img src="./img//13.webp" alt="">
+        </div>
       </div>
-
-      <div class="works-page__inner">
-        <p>
-          一から森の中で住環境を設え、火を熾し、食事を摂り、寝床につく、それだけの遊びにのめり込んだ。
-        </p>
+      <p>
+        到着後、手早くタープをセットし、新しいテーブルのプロトタイプを現場で確認。実際にキャンプで使いながらテストする。国は違えど、自然の中で生活を営むという、シンプルな遊びに境界はなく、豊かな時間を共有できることが何より嬉しい。次第に付近は濃霧に包まれ、まるで山水の世界に迷い込んだような幻想的な情景となった。
+      </p>
+      <div class="normal-img">
+        <img src="./img//15.webp" alt="">
       </div>
+      <p>
+        豊かな時間を共有できることが何より嬉しい。次第に付近は濃霧に包まれ、まるで山水の世界に迷い込んだような幻想的な情景となった。
+      </p>
+    </div>
 
-      <div class="wide-img">
-        <img src="./img//外壁.webp" alt="">
+    <div class="tall-img__wrapper">
+      <div class="tall-img">
+        <img src="./img//DSC_0545.webp" alt="">
       </div>
-
-      <div class="works-page__inner">
-        <p>
-          一から森の中で住環境を設え、火を熾し、食事を摂り、寝床につく、それだけの遊びにのめり込んだ。どうやら、人間の基本設計は、今もなお、ご先祖様が長い時間を過ごしてきた
-        </p>
-
-        <p class="closing">
-          まとめのテキストまとめのテキストまとめのテキストまとめのテキストまとめのテキストまとめのテキストまとめのテキストまとめのテキストまとめのテキストまとめのテキストまとめのテキストまとめのテキストまとめのテキスト
-        </p>
+      <div class="tall-img">
+        <img src="./img//DSC_0545.webp" alt="">
       </div>
+    </div>
+
+    <div class="works-page__inner">
+      <p>
+        そもそも私がキャンプを始めたのは、東京での多忙なデザイン仕事からの逃避のためだった。ひとときでも脳内をリセットできる強力な浄化作用。
+      </p>
+    </div>
+
+    <div class="wide-img">
+      <img src="./img//ジョリパット１.webp" alt="">
+    </div>
+
+    <div class="works-page__inner">
+      <p>
+        一から森の中で住環境を設え、火を熾し、食事を摂り、寝床につく、それだけの遊びにのめり込んだ。
+      </p>
+    </div>
+
+    <div class="wide-img">
+      <img src="./img//外壁.webp" alt="">
+    </div>
+
+    <div class="works-page__inner">
+      <p>
+        一から森の中で住環境を設え、火を熾し、食事を摂り、寝床につく、それだけの遊びにのめり込んだ。どうやら、人間の基本設計は、今もなお、ご先祖様が長い時間を過ごしてきた
+      </p>
+
+      <p class="closing">
+        まとめのテキストまとめのテキストまとめのテキストまとめのテキストまとめのテキストまとめのテキストまとめのテキストまとめのテキストまとめのテキストまとめのテキストまとめのテキストまとめのテキストまとめのテキスト
+      </p>
+    </div>
 
 
-    </main>
+  </main>
 
 
 
@@ -182,17 +183,18 @@
 
 
 
-    <!-- ***************** footer ***************** -->
-    <footer class="footer">
-      <ul class="footer__ul">
-        <li class="footer__li"><a href="./privacy-policy.html">Privacy Policy</a></li>
-        <li>
-          <small>&copy; Copyright 2025 有限会社 田里興業</small>
-        </li>
-      </ul>
-    </footer>
+  <!-- ***************** footer ***************** -->
+  <footer class="footer">
+    <ul class="footer__ul">
+      <li class="footer__li"><a href="./privacy-policy.html">Privacy Policy</a></li>
+      <li>
+        <small>&copy; Copyright 2025 有限会社 田里興業</small>
+      </li>
+    </ul>
+  </footer>
 
 
-    <script src="./js/script.js"></script>
-  </body>
+  <script src="./js/script.js"></script>
+</body>
+
 </html>
