style: トップページのレスポンシブを一通り調整

--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
         </div>
         <div class="works__top">
           <div class="works__main-img fadeUpTrigger">
-            <img src="./img/DSC_0195 1.webp" alt="works__メイン画像">
+            <img src="./img/DSC_0195 1.webp" alt="works__top画像">
           </div>
           <div class="works__vertical-writing fadeUpTrigger late">
             <p>集合住宅<br>戸建住宅<br>商業施設<br>公共施設等<br>幅広く対応いたします。</p>
@@ -145,22 +145,20 @@
           </div>
         </div>
         <div class="works__inner works__tt">
+
           <div class="works__t">
             <h3 class="works__product__title deco-title">施工事例：ジョリパッド</h3>
-            <div class="works__txt fadeUpTrigger">
-              <p>
-                ジョリパット施工は、デザイン性と耐久性を兼ね備えた高品質な塗り壁材を用いる施工です。独特の質感と多彩な仕上げパターンで、住宅や商業施設の外壁・内装を美しく演出します。<br>
-                弊社では、熟練の左官職人が丁寧な施工を行い、お客様の理想の仕上がりを実現します。
-              </p>
-            </div>
-          </div> <!-- works__t -->
-          <div class="works__pic pic-f">
-              <!-- <div class="pic-f__img img01">
-                <img src="./img//14.webp" alt="">
-              </div> -->
+            <div class="works__pic pic-f">
               <div class="pic-f__img img02">
                 <img src="./img//13.webp" alt="">
               </div>
+            </div>
+          </div> <!-- works__t -->
+          <div class="works__txt fadeUpTrigger">
+            <p>
+              ジョリパット施工はデザイン性と耐久性を兼ね備えた高品質な塗り壁材を用いる施工です。独特の質感と多彩な仕上げパターンで、住宅や商業施設の外壁・内装を美しく演出します。
+              弊社では熟練の左官職人が丁寧な施工を行い、お客様の理想の仕上がりを実現します。
+            </p>
           </div>
         </div> <!-- works__inner works__tt -->
         <div class="works__inner">
@@ -186,24 +184,30 @@
                 一緒にはたらく仲間を<br>募集しています。
               </p>
               <p class="recruit__txt fadeUpTrigger">
-                詳細は募集要項をご覧ください
+                <!-- 詳細は募集要項をご覧ください -->
               </p>
               <div class="button-more fadeUpTrigger">
                 <a href="./recruit.html" class="button-more__link">
-                  <span class="button-more__text">詳しく見る</span>
+                  <span class="button-more__text">募集要項</span>
                   <span class="button-more__arrow">→</span>
                 </a>
               </div>
             </div>
           </div>
-          <div class="recruit-contact__wrapper2"> <!-- r-c 右のボックス -->
+          <div class="recruit-contact__wrapper2 pc-line"> <!-- r-c 右のボックス -->
             <div class="contact__title--wrapper fadeUpTrigger">
               <h2 class="contact__title section-title">Contact</h2>
             </div>
             <div class="contact__wrapper">
               <p class="contact__route fadeUpTrigger">tel. 03-3733-2751</p>
               <p class="contact__route fadeUpTrigger">fax. 03-3733-2752</p>
-              <p class="contact__route fadeUpTrigger">mail. tasato-kogyo@ark.ocn.ne.jp</p>
+              <!-- <p class="contact__route fadeUpTrigger">mail. tasato-kogyo@ark.ocn.ne.jp</p> -->
+            </div>
+            <div class="contact__more button-more fadeUpTrigger">
+              <a href="./contact.html" class="button-more__link">
+                <span class="button-more__text">お問い合わせ</span>
+                <span class="button-more__arrow">→</span>
+              </a>
             </div>
           </div>
         </div>
