feat: worksページの施工紹介分を編集

--- a/works.html
+++ b/works.html
@@ -78,7 +78,7 @@
   <main>
     <div class="works-page__inner">
       <p class="introduction">
-        田里興業ではRC造、2x4工法・改修工事等に関わる左官工事全般をお請けしています。<br>ここでは実際の現場での施工事例をご紹介します。
+        田里興業ではRC造、2x4工法・改修工事等に関わる左官工事全般をお請けしています。<br>実際の現場での施工の様子をご紹介します。
       </p>
 
       <div class="pic-f">
@@ -91,7 +91,7 @@
       </div>
 
       <p>
-        一から森の中で住環境を設え、火を熾し、食事を摂り、寝床につく、それだけの遊びにのめり込んだ。一から森の中で住環境を設え、火を熾し、食事を摂り、寝床につく、それだけの遊びにのめり込んだ。
+        左官工事において「下地」は、仕上げの美しさや耐久性を左右するとても重要な工程。<br>適切な下地塗りを施すことで、仕上げ材の密着性が向上し、ひび割れや剥離を防ぐことができる。
       </p>
     </div>
     <div class="wide-img">
@@ -99,7 +99,7 @@
     </div>
     <div class="works-page__inner">
       <p>
-        一から森の中で住環境を設え、火を熾し、食事を摂り、寝床につく、それだけの遊びにのめり込んだ。
+        塗装は 「下地が8割、塗りが2割」と言われるほど、下地の仕上がりが重要。適切な下地処理を行わないと、見た目の美しさだけでなく、塗装の耐久性や建物全体の寿命にも悪影響を及ぼします。あとの工程を担当する業者がより良いを仕上げ実現するためには、下地の段階で 清掃・補修・平滑化を徹底することが不可欠。
       </p>
     </div>
     <div class="wide-img">
@@ -108,13 +108,13 @@
 
     <div class="works-page__inner">
       <p>
-        一から森の中で住環境を設え、火を熾し、食事を摂り、寝床につく、それだけの遊びにのめり込んだ。
+        階段の下地は、仕上げの品質だけでなく、安全性や耐久性にも大きく影響します。適切な下地施工を行うことで、 長期間にわたって快適で安全な階段 を維持することができます。施工の際は、強度・平滑性・密着性に注意し、慎重に作業を進める。
       </p>
       <div class="normal-img">
         <img src="./img//階段上げ裏.webp" alt="">
       </div>
       <p>
-        一から森の中で住環境を設え、火を熾し、食事を摂り、寝床につく、それだけの遊びにのめり込んだ。
+        塗装後の階段裏の様子。
       </p>
       <div class="pic-f">
         <div class="pic-f__img img01">
@@ -125,13 +125,13 @@
         </div>
       </div>
       <p>
-        到着後、手早くタープをセットし、新しいテーブルのプロトタイプを現場で確認。実際にキャンプで使いながらテストする。国は違えど、自然の中で生活を営むという、シンプルな遊びに境界はなく、豊かな時間を共有できることが何より嬉しい。次第に付近は濃霧に包まれ、まるで山水の世界に迷い込んだような幻想的な情景となった。
+        ジョリパット施工はデザイン性と耐久性を兼ね備えた高品質な塗り壁材を用いる施工。独特の質感と多彩な仕上げパターンで、住宅や商業施設の外壁・内装を美しく演出することが可能。この現場では玄関ロビー正面の壁をジョリパッドで仕上げ、高級感を演出している。
       </p>
       <div class="normal-img">
         <img src="./img//15.webp" alt="">
       </div>
       <p>
-        豊かな時間を共有できることが何より嬉しい。次第に付近は濃霧に包まれ、まるで山水の世界に迷い込んだような幻想的な情景となった。
+        熟練の職人が丁寧に施工。
       </p>
     </div>
 
@@ -146,18 +146,12 @@
 
     <div class="works-page__inner">
       <p>
-        そもそも私がキャンプを始めたのは、東京での多忙なデザイン仕事からの逃避のためだった。ひとときでも脳内をリセットできる強力な浄化作用。
+        施工後ライトアップされた様子。高級感が漂う仕上がりに。
       </p>
     </div>
 
     <div class="wide-img">
       <img src="./img//ジョリパット１.webp" alt="">
-    </div>
-
-    <div class="works-page__inner">
-      <p>
-        一から森の中で住環境を設え、火を熾し、食事を摂り、寝床につく、それだけの遊びにのめり込んだ。
-      </p>
     </div>
 
     <div class="wide-img">
@@ -166,11 +160,11 @@
 
     <div class="works-page__inner">
       <p>
-        一から森の中で住環境を設え、火を熾し、食事を摂り、寝床につく、それだけの遊びにのめり込んだ。どうやら、人間の基本設計は、今もなお、ご先祖様が長い時間を過ごしてきた
+        無機質でスタイリッシュなモダンデザインが特徴的なコンクリート打ち放し仕上げ。素材の質感を活かすことで、独特の存在感を生み出すことが可能。打ち放し仕上げは、「打設したら終わり」ではなく、左官職人の技術で美しく仕上げることが求められる。特に補修・コーティングの精度が最終的な見た目を大きく左右するため、熟練の技が必要不可欠。
       </p>
 
       <p class="closing">
-        まとめのテキストまとめのテキストまとめのテキストまとめのテキストまとめのテキストまとめのテキストまとめのテキストまとめのテキストまとめのテキストまとめのテキストまとめのテキストまとめのテキストまとめのテキスト
+        最後まで丁寧な施工を心がけ品質の高い仕上がりをお届けするという理念のもと、基礎の下地施工から外観の美しさを左右する仕上げまで、幅広い施工に対応しております。
       </p>
     </div>
 
