perf: imgのsrc属性に最適化した画像を指定

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
     <div class="top">
       <p class="top__txt-img"><img src="./img/縦書き_テスト.png" alt=""></p>
       <div class="top__img">
-        <img src="./img/yoshino-02.jpg" alt="top背景画像">
+        <img src="./img/top.webp" alt="top画像">
       </div>
     </div>
 
@@ -133,7 +133,7 @@
         </div>
         <div class="works__top">
           <div class="works__main-img fadeUpTrigger">
-            <img src="./img/DSC_0195 1.webp" alt="works__top画像">
+            <img src="./img/top-works.webp" alt="works__top画像">
           </div>
           <div class="works__vertical-writing fadeUpTrigger late">
             <p>集合住宅<br>戸建住宅<br>商業施設<br>公共施設等<br>幅広く対応いたします。</p>
@@ -150,7 +150,7 @@
             <h3 class="works__product__title deco-title">施工事例：ジョリパッド</h3>
             <div class="works__pic pic-f">
               <div class="pic-f__img img02">
-                <img src="./img//13.webp" alt="">
+                <img src="./img/top-joripad.webp" alt="ジョリパッド画像">
               </div>
             </div>
           </div> <!-- works__t -->
