--- a/works.html
+++ b/works.html
@@ -83,66 +83,69 @@
 
       <div class="pic-f">
         <div class="pic-f__img img01">
-          <img src="./img//11.webp" alt="">
+          <img src="./img/sitaji-01.webp" alt="">
         </div>
         <div class="pic-f__img img02">
-          <img src="./img//12.webp" alt="">
+          <img src="./img/sitaji-02.webp" alt="">
         </div>
       </div>
-
       <p>
         左官工事において「下地」は、仕上げの美しさや耐久性を左右するとても重要な工程。<br>適切な下地塗りを施すことで、仕上げ材の密着性が向上し、ひび割れや剥離を防ぐことができる。
       </p>
     </div>
     <div class="wide-img">
-      <img src="./img//19.webp" alt="">
+      <img src="./img/sitaji-03.webp" alt="">
     </div>
     <div class="works-page__inner">
       <p>
-        塗装は 「下地が8割、塗りが2割」と言われるほど、下地の仕上がりが重要。適切な下地処理を行わないと、見た目の美しさだけでなく、塗装の耐久性や建物全体の寿命にも悪影響を及ぼします。あとの工程を担当する業者がより良いを仕上げ実現するためには、下地の段階で 清掃・補修・平滑化を徹底することが不可欠。
+        塗装は
+        「下地が8割、塗りが2割」と言われるほど、下地の仕上がりが重要。適切な下地処理を行わないと、見た目の美しさだけでなく、塗装の耐久性や建物全体の寿命にも悪影響を及ぼします。あとの工程を担当する業者がより良いを仕上げ実現するためには、下地の段階で
+        清掃・補修・平滑化を徹底することが不可欠。
       </p>
     </div>
     <div class="wide-img">
-      <img src="./img//階段２.webp" alt="">
+      <img src="./img/stairs-01.webp" alt="">
     </div>
 
     <div class="works-page__inner">
       <p>
-        階段の下地は、仕上げの品質だけでなく、安全性や耐久性にも大きく影響します。適切な下地施工を行うことで、 長期間にわたって快適で安全な階段 を維持することができます。施工の際は、強度・平滑性・密着性に注意し、慎重に作業を進める。
+        階段の下地は、仕上げの品質だけでなく、安全性や耐久性にも大きく影響します。適切な下地施工を行うことで、 長期間にわたって快適で安全な階段
+        を維持することができます。施工の際は、強度・平滑性・密着性に注意し、慎重に作業を進める。
       </p>
       <div class="normal-img">
-        <img src="./img//階段上げ裏.webp" alt="">
+        <img src="./img/stairs-02.webp" alt="">
       </div>
       <p>
         塗装後の階段裏の様子。
       </p>
       <div class="pic-f">
-        <div class="pic-f__img img01">
-          <img src="./img//14.webp" alt="">
-        </div>
-        <div class="pic-f__img img02">
-          <img src="./img//13.webp" alt="">
+        <div class="pic-f__img">
+          <img src="./img/joripad-01.webp" alt="">
         </div>
       </div>
       <p>
         ジョリパット施工はデザイン性と耐久性を兼ね備えた高品質な塗り壁材を用いる施工。独特の質感と多彩な仕上げパターンで、住宅や商業施設の外壁・内装を美しく演出することが可能。この現場では玄関ロビー正面の壁をジョリパッドで仕上げ、高級感を演出している。
       </p>
       <div class="normal-img">
-        <img src="./img//15.webp" alt="">
+        <img src="./img/joripad-02.webp" alt="">
       </div>
       <p>
-        熟練の職人が丁寧に施工。
+        熟練の職人が丁寧に施工。間近で見ると直線が揃っていることを確認でき、また素材の味が出ていることがわかる。
       </p>
     </div>
 
-    <div class="tall-img__wrapper">
-      <div class="tall-img">
-        <img src="./img//DSC_0545.webp" alt="">
-      </div>
-      <div class="tall-img">
-        <img src="./img//DSC_0545.webp" alt="">
-      </div>
+    <div class="wide-img">
+      <img src="./img/joripad-03.webp" alt="">
     </div>
+    <div class="works-page__inner">
+      <p>
+        施工完了時
+      </p>
+    </div>
+    <div class="wide-img">
+      <img src="./img/joripad-04.webp" alt="">
+    </div>
+
 
     <div class="works-page__inner">
       <p>
@@ -151,12 +154,9 @@
     </div>
 
     <div class="wide-img">
-      <img src="./img//ジョリパット１.webp" alt="">
+      <img src="./img/outer-wall.webp" alt="">
     </div>
 
-    <div class="wide-img">
-      <img src="./img//外壁.webp" alt="">
-    </div>
 
     <div class="works-page__inner">
       <p>
