feat: works-page - 施工サブタイトルを追加 - スタンプコンクリートの説明を追加 refactor: works-page不要な要素を削除

--- a/works.html
+++ b/works.html
@@ -35,7 +35,7 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script> <!-- jQueryの読み込み -->
 </head>
 
-<body class="works__page">
+<body class="works-page">
   <!-- ***************** header ***************** -->
   <header class="header">
     <div class="header__container">
@@ -78,9 +78,9 @@
   <main>
     <div class="works-page__inner">
       <p class="introduction">
-        田里興業ではRC造、2x4工法・改修工事等に関わる左官工事全般をお請けしています。<br>実際の現場での施工の様子をご紹介します。
+        田里興業ではRC造、2x4工法・改修工事等に関わる左官工事全般をお請けしています。
       </p>
-
+      <h3 class="works__product__title deco-title">下地処理</h3>
       <div class="pic-f">
         <div class="pic-f__img img01">
           <img src="./img/sitaji-01.webp" alt="">
@@ -89,94 +89,95 @@
           <img src="./img/sitaji-02.webp" alt="">
         </div>
       </div>
-      <p>
-        左官工事において「下地」は、仕上げの美しさや耐久性を左右するとても重要な工程。<br>適切な下地塗りを施すことで、仕上げ材の密着性が向上し、ひび割れや剥離を防ぐことができる。
+      <p class="works-page__txt">
+        左官工事において「下地」は、仕上げの美しさや耐久性を左右するとても重要な工程です。<br>適切な下地塗りを施すことで、仕上げ材の密着性が向上し、ひび割れや剥離を防ぐことができます。
       </p>
-    </div>
-    <div class="wide-img">
+    </div><!-- inner -->
+    <div class="wide-img reversal-img">
       <img src="./img/sitaji-03.webp" alt="">
     </div>
     <div class="works-page__inner">
-      <p>
-        塗装は
-        「下地が8割、塗りが2割」と言われるほど、下地の仕上がりが重要。適切な下地処理を行わないと、見た目の美しさだけでなく、塗装の耐久性や建物全体の寿命にも悪影響を及ぼします。あとの工程を担当する業者がより良いを仕上げ実現するためには、下地の段階で
-        清掃・補修・平滑化を徹底することが不可欠。
+      <p class="works-page__txt">
+        塗装は「下地が8割、塗りが2割」と言われるほど、下地の仕上がりが重要。適切な下地処理を行わないと、見た目の美しさだけでなく、塗装の耐久性や建物全体の寿命にも悪影響を及ぼします。あとの工程を担当する業者がより良いを仕上げ実現するためには、下地の段階で清掃・補修・平滑化を徹底することが不可欠です。
       </p>
     </div>
     <div class="wide-img">
       <img src="./img/stairs-01.webp" alt="">
     </div>
-
     <div class="works-page__inner">
-      <p>
-        階段の下地は、仕上げの品質だけでなく、安全性や耐久性にも大きく影響します。適切な下地施工を行うことで、 長期間にわたって快適で安全な階段
-        を維持することができます。施工の際は、強度・平滑性・密着性に注意し、慎重に作業を進める。
+      <p class="works-page__txt">
+        階段の下地は、仕上げの品質だけでなく、安全性や耐久性にも大きく影響します。適切な下地施工を行うことが、長期間にわたって快適で安全な階段の維持に繋がります。施工の際は、強度・平滑性・密着性に注意し、慎重に作業を進めます。
       </p>
       <div class="normal-img">
         <img src="./img/stairs-02.webp" alt="">
       </div>
-      <p>
+      <p class="works-page__txt">
         塗装後の階段裏の様子。
       </p>
+    </div>
+    <div class="works-page__inner">
+      <h3 class="works__product__title deco-title">ジョリパッド</h3>
       <div class="pic-f">
         <div class="pic-f__img">
           <img src="./img/joripad-01.webp" alt="">
         </div>
       </div>
-      <p>
-        ジョリパット施工はデザイン性と耐久性を兼ね備えた高品質な塗り壁材を用いる施工。独特の質感と多彩な仕上げパターンで、住宅や商業施設の外壁・内装を美しく演出することが可能。この現場では玄関ロビー正面の壁をジョリパッドで仕上げ、高級感を演出している。
+      <p class="works-page__txt">
+        ジョリパットはデザイン性と耐久性を兼ね備えた高品質な塗り壁材を用いる施工です。独特の質感と多彩な仕上げパターンで、住宅や商業施設の外壁・内装を美しく演出することが可能です。この現場では玄関ロビー正面の壁をジョリパッドで仕上げ、高級感を演出しています。
       </p>
       <div class="normal-img">
         <img src="./img/joripad-02.webp" alt="">
       </div>
-      <p>
-        熟練の職人が丁寧に施工。間近で見ると直線が揃っていることを確認でき、また素材の味が出ていることがわかる。
+      <p class="works-page__txt">
+        熟練の職人が素材の味を活かし丁寧に施工。間近で見ると美しく線が揃っていることを確認できます。
       </p>
     </div>
-
     <div class="wide-img">
       <img src="./img/joripad-03.webp" alt="">
     </div>
     <div class="works-page__inner">
-      <p>
-        施工完了時
+      <p class="works-page__txt">
+        施工完了時の様子。
       </p>
     </div>
     <div class="wide-img">
       <img src="./img/joripad-04.webp" alt="">
     </div>
-
-
     <div class="works-page__inner">
-      <p>
+      <p class="works-page__txt">
         施工後ライトアップされた様子。高級感が漂う仕上がりに。
       </p>
     </div>
-
+    <div class="works-page__inner">
+      <h3 class="works__product__title deco-title">打ち放し仕上げ</h3>
+    </div>
     <div class="wide-img">
       <img src="./img/outer-wall.webp" alt="">
     </div>
-
-
     <div class="works-page__inner">
-      <p>
-        無機質でスタイリッシュなモダンデザインが特徴的なコンクリート打ち放し仕上げ。素材の質感を活かすことで、独特の存在感を生み出すことが可能。打ち放し仕上げは、「打設したら終わり」ではなく、左官職人の技術で美しく仕上げることが求められる。特に補修・コーティングの精度が最終的な見た目を大きく左右するため、熟練の技が必要不可欠。
-      </p>
-
-      <p class="closing">
-        最後まで丁寧な施工を心がけ品質の高い仕上がりをお届けするという理念のもと、基礎の下地施工から外観の美しさを左右する仕上げまで、幅広い施工に対応しております。
+      <p class="works-page__txt">
+        無機質でスタイリッシュなモダンデザインが特徴的なコンクリート打ち放し仕上げ。素材の質感を活かすことで、独特の存在感を生み出すことが可能です。打ち放し仕上げは、「打設したら終わり」ではなく、左官職人の技術で美しく仕上げることが求められます。特に補修・コーティングの精度が最終的な見た目を大きく左右するため、熟練の技が必要不可欠です。
       </p>
     </div>
-
-
+    <!-- スタンプ -->
+    <div class="works-page__inner">
+      <h3 class="works__product__title deco-title">スタンプコンクリート</h3>
+      <div class="normal-img grayscale">
+        <img src="./img/stamp-02.webp" alt="スタンプ画像2">
+      </div>
+      <p class="works-page__txt">
+        スタンプコンクリートは、コンクリートの表面に型押し（スタンプ）を施し、石材・レンガ・木目などの質感を再現する工法です。通常のコンクリートよりも意匠性が高く、耐久性に優れた床面仕上げが可能です。
+      </p>
+      <div class="pic-f">
+        <div class="pic-f__img grayscale">
+          <img src="./img/stamp-01.webp" alt="スタンプ画像1">
+        </div>
+      </div>
+      <p>
+        スタンプコンクリートはデザインパターンによって風合いの違いを出すことができ、住居から商業施設まで広く採用されています。
+      </p>
+    </div>
   </main>
-
-
-
-
-
-
-
   <!-- ***************** footer ***************** -->
   <footer class="footer">
     <ul class="footer__ul">
