style: worksページのPCレスポンシブを調整、サブページheaderの調整

--- a/contact.html
+++ b/contact.html
@@ -73,7 +73,9 @@
     </div>
   </nav><!-- ナビここまで -->
   <div class="sub-page__title">
-    <h1>Contact</h1>
+    <div class="sub-page__title__container">
+      <h1>Contact</h1>
+    </div>
   </div>
   <!-- ***************** 【おためし】Noway Form ***************** -->
   <!-- <section>
