--- a/works.html
+++ b/works.html
@@ -72,16 +72,18 @@
     </div>
   </nav><!-- ナビここまで -->
   <div class="sub-page__title">
-    <h1>Works</h1>
+    <div class="sub-page__title__container">
+      <h1>Works</h1>
+    </div>
   </div>
   <!-- ***************** main ***************** -->
   <main>
     <div class="works-page__inner">
       <p class="introduction">
-        田里興業ではRC造、2x4工法・改修工事等に関わる左官工事全般をお請けしています。
+        主にRC造の現場を請け負わせていただいております。そのほか2x4工法・改修工事等に関わる左官工事全般をお請けしています。
       </p>
       <h3 class="works__product__title deco-title">下地処理</h3>
-      <div class="pic-f">
+      <div class="pic-f works-page__pic">
         <div class="pic-f__img img01">
           <img src="./img/sitaji-01.webp" alt="">
         </div>
@@ -98,7 +100,7 @@
     </div>
     <div class="works-page__inner">
       <p class="works-page__txt">
-        塗装は「下地が8割、塗りが2割」と言われるほど、下地の仕上がりが重要。適切な下地処理を行わないと、見た目の美しさだけでなく、塗装の耐久性や建物全体の寿命にも悪影響を及ぼします。あとの工程を担当する業者がより良いを仕上げ実現するためには、下地の段階で清掃・補修・平滑化を徹底することが不可欠です。
+        下地の上に仕上げの塗装をした状態です。塗装は「下地が8割、塗りが2割」と言われるほど、下地の仕上がりが重要。適切な下地処理を行わないと、見た目の美しさだけでなく、塗装の耐久性や建物全体の寿命にも悪影響を及ぼします。仕上げ工程の質を担保するためには、下地の段階で清掃・補修・平滑化を徹底することが不可欠です。
       </p>
     </div>
     <div class="wide-img">
