--- a/about.html
+++ b/about.html
@@ -72,7 +72,9 @@
     </div>
   </nav><!-- ナビここまで -->
   <div class="sub-page__title">
-    <h1>About</h1>
+    <div class="sub-page__title__container">
+      <h1>About</h1>
+    </div>
   </div>
   <main>
     <section class="greeting">
