--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -67,7 +67,9 @@
     </div>
   </nav><!-- ナビここまで -->
   <div class="sub-page__title">
-    <h1>Privacy Policy</h1>
+    <div class="sub-page__title__container">
+      <h1>Privacy Policy</h1>
+    </div>
   </div>
   <!-- ******************************* footer ******************************* -->
   <footer class="footer">
