--- a/recruit.html
+++ b/recruit.html
@@ -66,7 +66,9 @@
     </div>
   </nav><!-- ナビここまで -->
   <div class="sub-page__title">
-    <h1>Recruit</h1>
+    <div class="sub-page__title__container">
+      <h1>Recruit</h1>
+    </div>
   </div>
   <main>
     <section class="recruit">
