style: aboutページのPCレスポンシブを調整

--- a/about.html
+++ b/about.html
@@ -72,7 +72,7 @@
     </div>
   </nav><!-- ナビここまで -->
   <div class="sub-page__title">
-    <div class="sub-page__title__container">
+    <div class="sub-page__title__container about-page__title">
       <h1>About</h1>
     </div>
   </div>
@@ -86,9 +86,9 @@
         <div class="greeting__wrap">
           <div class="greeting__txt">
             <p>
-              昭和63年の創業以来、東京都大田区を拠点に、東京23区および神奈川県を中心に左官工事を手がけてまいりました。<br>
-              左官の技術は、建物の美しさと耐久性を支える重要な仕事です。私たちは、一つひとつの現場に真摯に向き合い、確かな技術と細部へのこだわりを大切にしながら、お客様にご満足いただける仕上がりを追求してきました。<br><br>
-              最後まで丁寧な施工を心がけ、品質の高い仕上がりをお届けするとい理念のもと基礎の下地施工から最新の仕上げまで、幅広い施工に対応しております。これからも培ってきた経験と技術を活かし、より良い施工を提供できるよう努力してまいります。<br><br>
+              昭和63年の創業以来、東京都大田区を拠点に、東京23区および神奈川県を中心に左官工事を手がけてまいりました。
+              左官の技術は、建物の美しさと耐久性を支える重要な仕事です。私たちは、一つひとつの現場に真摯に向き合い、確かな技術と細部へのこだわりを大切にしながら、お客様にご満足いただける仕上がりを追求してきました。<br>
+              最後まで丁寧な施工を心がけ、品質の高い仕上がりをお届けするとい理念のもと基礎の下地施工から最新の仕上げまで、幅広い施工に対応しております。これからも培ってきた経験と技術を活かし、より良い施工を提供できるよう努力してまいります。<br>
               お客様の理想を形にするために、全力でサポートいたしますので、左官工事のことならお気軽にご相談ください。
             </p>
           </div>
