style: recruitページのPCレスポンシブを調整

--- a/recruit.html
+++ b/recruit.html
@@ -109,16 +109,16 @@
             <h3 class="job-description__item--title">仕事内容</h3>
             <ul class="job-description__list--lv2nd">
               <li>
-                <p class="plus-margin">主に外内壁、玄関、バルコニー等の下地施工</p>
+                <p class="recruit__add-margin-bottom">主に外内壁、玄関、バルコニー等の下地施工</p>
               </li>
               <li>
                 <h4>【未経験者】</h4>
-                <p class="plus-margin">ベテラン職人の仕事に同行し、仕事内容を把握することからスタートします。</p>
-                <p class="plus-margin">見習いとして基本的な仕事からはじめ、少しずつ技術を身につけていただきます。</p>
+                <p class="recruit__add-margin-bottom">ベテラン職人の仕事に同行し、仕事内容を把握することからスタートします。</p>
+                <p class="recruit__add-margin-bottom">見習いとして基本的な仕事からはじめ、少しずつ技術を身につけていただきます。</p>
               </li>
               <li>
                 <h4>【経験者】</h4>
-                <p class="plus-margin">仕事の流れを把握していただき、即戦力として活躍いただきます。</p>
+                <p class="recruit__add-margin-bottom">仕事の流れを把握していただき、即戦力として活躍いただきます。</p>
                 <p>経験が浅い方・ブランクがある方でも少しずつ仕事を覚えていけば問題ございません。</p>
               </li>
             </ul>
@@ -126,7 +126,7 @@
           <li class="job-description__item">
             <h3 class="job-description__item--title">勤務地</h3>
             <ul class="job-description__list--lv2nd">
-              <li class="plus-margin">
+              <li class="recruit__add-margin-bottom">
                 <h4>【現場】</h4>
                 <p>主に東京都23区内・神奈川県北部</p>
               </li>
@@ -153,7 +153,7 @@
           <li class="job-description__item">
             <h3 class="job-description__item--title">給与</h3>
             <ul class="job-description__list--lv2nd">
-              <li class="plus-margin">
+              <li class="recruit__add-margin-bottom">
                 <h4>【基本給】</h4>
                 <p>月給270,000円〜420,000円</p>
                 <p>※ご経験・現場技術により決定</p>
@@ -168,12 +168,12 @@
           <li class="job-description__item">
             <h3 class="job-description__item--title">休日</h3>
             <ul class="job-description__list--lv2nd">
-              <li class="plus-margin">
+              <li class="recruit__add-margin-bottom">
                 <h4>【基本】</h4>
                 <p>土日休み</p>
                 <p>※現場スケジュールにより変動する可能性あり。</p>
               </li>
-              <li class="plus-margin">
+              <li class="recruit__add-margin-bottom">
                 <h4>【有給休暇】</h4>
                 <p>10日</p>
               </li>
