--- a/contact.html
+++ b/contact.html
@@ -81,20 +81,35 @@
       <div class="contact__intro">
         <p>田里興業にご関心をお寄せいただき、誠にありがとうございます。左官工事に関するご相談、ご依頼、またはお見積もりのご希望がございましたら、お気軽にお問い合わせください。</p>
       </div>
-      <form action="submit.php" method="post">
-        <dl>
-          <dt><label for="name">お名前<span>[必須]</span></label></dt>
-          <dd><input type="text" id="name" name="name" placeholder="" required></dd>
-          <dt><label for="name">お名前(カナ)<span>[必須]</span></label></dt>
-          <dd><input type="text" id="name-read" name="name-read" placeholder="" required></dd>
-          <dt><label for="name">企業名(法人の場合)</label></dt>
-          <dd><input type="text" id="company-name" name="company-name" placeholder="" required></dd>
-          <dt><label for="email">メールアドレス<span>[必須]</span></label></dt>
-          <dd><input type="email" id="email" name="email" placeholder="tasato@gmail.com" required></dd>
-          <dt><label for="email">電話番号</label></dt>
-          <dd><input type="number" id="tel-number" name="tel-number" placeholder="000-0000-0000" required></dd>
-          <dt><label for="message">お問い合わせ内容<span>[必須]</span></label></dt>
-          <dd><textarea id="message" name="message" rows="4" placeholder="(例)お問い合わせ内容を入力してください。" required></textarea></dd>
+      <form class="contact__form" action="#" method="post">
+        <dl class="form__list">
+          <div class="form-row">
+            <dt class="form__list__label"><label for="name">お名前<span>[必須]</span></label></dt>
+            <dd class="form__list__input"><input type="text" id="name" name="name" placeholder="" required></dd>
+          </div>
+          <div class="form-row">
+            <dt class="form__list__label"><label for="name">お名前(カナ)<span>[必須]</span></label></dt>
+            <dd class="form__list__input"><input type="text" id="name-read" name="name-read" placeholder="" required></dd>
+          </div>
+          <div class="form-row">
+            <dt class="form__list__label"><label for="name">企業名(法人の場合)</label></dt>
+            <dd class="form__list__input"><input type="text" id="company-name" name="company-name" placeholder="" required></dd>
+          </div>
+          <div class="form-row">
+            <dt class="form__list__label"><label for="email">メールアドレス<span>[必須]</span></label></dt>
+            <dd class="form__list__input"><input type="email" id="email" name="email" placeholder="tasato@gmail.com" required></dd>
+          </div>
+          <div class="form-row">
+            <dt class="form__list__label"><label for="email">電話番号</label></dt>
+            <dd class="form__list__input"><input type="number" id="tel-number" name="tel-number" placeholder="000-0000-0000" required></dd>
+          </div>
+          <div class="form-row">
+            <dt class="form__list__label"><label for="message">お問い合わせ内容<span>[必須]</span></label></dt>
+            <dd class="form__list__input"><textarea id="message" name="message" rows="4" placeholder="(例)お問い合わせ内容を入力してください。" required></textarea>
+            </dd>
+          </div>
+          <div class="form-row">
+          </div>
         </dl>
         <button class="form-btn" type="submit">送信</button>
       </form>
